# ferrugem

./: Cargo.toml  README.md  doc.md
src/: environment.rs  expr.rs  interpreter.rs  main.rs  parser.rs  resolver.rs  scanner.rs  stmt.rs
src/tests/: mod.rs
src/tests/cases/: amb.c  amb.fe  anonim.fe  atribui_funcao.fe  atribuifn.go  bloco.gol  cadeia.fe  cadeia2.fe  cadeia3.fe  calc.fe  calc.go  campo_invalido.fe  campo_invalido.go  circular.fe  closure.fe  construtor.go  contexto.fe  decorador.fe  eco.fe  enquanto.fe  enquanto2.go  entidade.fe  escopo.fe  fonte.fe  fos.fe  funanon.jlox  funanon2.jlox  funescopo.jlox  funfun.fe  funfun.go  grep_self.jlox  heranca.p2  herdadelemesmo.jlox  herdanon.jlox  hora.fe  hora.go  idade.fe  idade.go  invalid_number_of_args_constructor.jlox  laco.fe  (+35 more)
src/tests/cases/bk/: access_nonexisting_field.jlox  basic_inheritance.jlox  block.jlox  call_clock.jlox  classwmethod.jlox  classwmethodreturn.jlox  define_class.jlox  echo_cmd.jlox  forloop.jlox  funanon.jlox  funclosure.jlox  funcondreturn.jlox  fundef.jlox  funreturn.jlox  funreturnnil.jlox  funverynested.jlox  generic.jlox  getset.jlox  inherit_from_nonclass.jlox  inheritance_with_init.jlox  invalid_number_of_args_constructor.jlox  invaliduseofthis.jlox  loose_return.jlox  multiple_declarations.jlox  nontrivial_constructor.jlox  resolve3.jlox  setgetfn.jlox  super_with_no_superclass.jlox  thisfails.jlox  thismethod.jlox  while.p2  while_math.jlox
