[package]
name = "fe"
authors = ["VITOR, Ricardo da Rocha <ricardodarocha@outlook.com>", ]
description = "[FE] Ferrugem | Portugol sendo reescrito em Rust"
documentation = ""
homepage = ""
repository = ""
keywords = ["portugol", "rust", "pt-br", "interpretador", "analisador-lexico", "analisador-sintatico"]
readme = ""
license = "MIT"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
